{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 303,
  "lineage": "a28f5d96-e6eb-ac3f-941c-258dc23128d2",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "database_internet_gateway",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:781254623749:internet-gateway/igw-05ea21ef675145e4d",
            "id": "igw-05ea21ef675145e4d",
            "owner_id": "781254623749",
            "tags": {
              "Name": "chapter05-database-internet-gateway",
              "exam": "saa_c03",
              "workspace": "chapter05"
            },
            "tags_all": {
              "Name": "chapter05-database-internet-gateway",
              "exam": "saa_c03",
              "workspace": "chapter05"
            },
            "vpc_id": "vpc-0934480d182667119"
          },
          "dependencies": [
            "module.network.aws_vpc.db_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_route",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05ea21ef675145e4d",
            "id": "r-rtb-085779553f0b67a4c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-085779553f0b67a4c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.database_internet_gateway",
            "module.network.aws_vpc.db_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_security_group",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:781254623749:security-group/sg-05072d711ece257d9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Default Outbound Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05072d711ece257d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "PostgreSQL",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "chapter05-database-security-group",
            "name_prefix": "",
            "owner_id": "781254623749",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0934480d182667119"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.db_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_a",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:781254623749:subnet/subnet-0e8fe693e4878fbf9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8fe693e4878fbf9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "781254623749",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chapter05-subnet-a",
              "exam": "saa_c03",
              "workspace": "chapter05"
            },
            "tags_all": {
              "Name": "chapter05-subnet-a",
              "exam": "saa_c03",
              "workspace": "chapter05"
            },
            "vpc_id": "vpc-0934480d182667119"
          },
          "dependencies": [
            "module.network.aws_vpc.db_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_b",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:781254623749:subnet/subnet-0609f1da4a9a5200d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0609f1da4a9a5200d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "781254623749",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chapter05-subnet-b",
              "exam": "saa_c03",
              "workspace": "chapter05"
            },
            "tags_all": {
              "Name": "chapter05-subnet-b",
              "exam": "saa_c03",
              "workspace": "chapter05"
            },
            "vpc_id": "vpc-0934480d182667119"
          },
          "dependencies": [
            "module.network.aws_vpc.db_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_c",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:781254623749:subnet/subnet-0f751b8c157e3560f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f751b8c157e3560f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "781254623749",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chapter05-subnet-c",
              "exam": "saa_c03",
              "workspace": "chapter05"
            },
            "tags_all": {
              "Name": "chapter05-subnet-c",
              "exam": "saa_c03",
              "workspace": "chapter05"
            },
            "vpc_id": "vpc-0934480d182667119"
          },
          "dependencies": [
            "module.network.aws_vpc.db_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "db_vpc",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:781254623749:vpc/vpc-0934480d182667119",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-058000369dadc9934",
            "default_route_table_id": "rtb-085779553f0b67a4c",
            "default_security_group_id": "sg-07a24c3f20adc8d0f",
            "dhcp_options_id": "dopt-0ebbfe9932fd1d5a5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0934480d182667119",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-085779553f0b67a4c",
            "owner_id": "781254623749",
            "tags": {
              "Name": "chapter05-db-vpc",
              "exam": "saa_c03",
              "workspace": "chapter05"
            },
            "tags_all": {
              "Name": "chapter05-db-vpc",
              "exam": "saa_c03",
              "workspace": "chapter05"
            }
          }
        }
      ]
    }
  ]
}